<resources>
    <string name="app_name">BlockChain</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_connection">Start Connection</string>
    <string name="hash">Hash</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="conection_status">Connection Status</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="clear">Clear</string>
    <string name="start">start</string>
    <string name="not_transaction">No transaction to show</string>
</resources>